--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.7.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-redux": "^6.0.0",
